interactive blocks debugging

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     <script src="collisions.js"></script>
+    <script src="interactive.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
