site load initial dialogue

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+    <div id="dialogueBox" class="hidden">
+        <p id="dialogueText"></p>
+    </div>
     <script src="collisions.js"></script>
     <script src="interactive.js"></script>
     <script src="index.js"></script>
+    <script src="dialogue.js"></script>
 </body>
 </html>
